--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
-Package: SpatCommStat
+Package: vario
 Type: Package
-Title: What the package does (short line)
+Title: Compute multivariate community variograms, carry out null models, and graph results
 Version: 1.0
-Date: 2011-09-21
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Date: 2012-01-01
+Author: Dan McGlinn
+Maintainer: Dan McGlinn <danmcglinn@gmail.com>
+Description: GPL-3
+License: GNU
 LazyLoad: yes
