--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,17 @@
 Package: vario
 Version: 1.0
 Date: 2012-01-01
-Title: Compute multivariate community variograms, carry out null models, and graph results
+Title: vario: comunity variograms for community ecologists
 Author: Dan McGlinn
 Maintainer: Dan McGlinn <danmcglinn@gmail.com>
-Depends: R (>= 2.10.0), vegan, snowfall
-Description: This package computes the spatial community variograms first developed in Wagner (Ecology, 2003) and further described in McGlinn and Hurlbert (Oikos, submitted). Additionally code is provided to carry out null model analysis to examine if the spatial patterns differ from chance expectation.  McGlinn and Hurlbert (submitted) fully describe the null models implemented here.  Lastly this package provides graphical helper functions for examining the results.
+Depends: R (>= 2.10.0), vegan
+Suggests: snowfall
+Description: This package computes the spatial community variograms first 
+developed in Wagner (Ecology, 2003) and further described in McGlinn and Hurlbert 
+(in prep). Additionally code is provided to carry out null model analysis to 
+examine if the spatial patterns differ from chance expectation.  McGlinn and 
+Hurlbert (submitted) fully describe the null models implemented here.  Lastly this 
+package provides graphical helper functions for examining the results.
 License: GPL-3
 URL: https://github.com/dmcglinn/vario
 LazyLoad: yes
